(feat):completed the todo app

--- a/index.html
+++ b/index.html
@@ -34,6 +34,10 @@
                 </div>
                 <hr>
             </div>
+
+            <div class="todo-list" id="todo-list">
+
+            </div>
         </div>
     </div>
 
